# org-tools

./: .org-tools.toml.example  .orgfmt.toml.example  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.org  mise.toml
.github/workflows/: ci.yml  release.yml
crates/org/: Cargo.toml
crates/org-tools-core/: Cargo.toml
crates/org-tools-core/src/: archive.rs  config.rs  cookie.rs  diagnostic.rs  document.rs  edna.rs  entry.rs  files.rs  formatter.rs  id.rs  lib.rs  locator.rs  output.rs  runner.rs  source.rs  state.rs  tblfm.rs
crates/org-tools-core/src/rules/: heading.rs  list.rs  mod.rs  timestamp.rs
crates/org-tools-core/src/rules/format/: blank_lines.rs  heading_spacing.rs  keyword_spacing.rs  list_format.rs  mod.rs  property_drawer_align.rs  regions.rs  table_formatter.rs  tag_alignment.rs  timestamp_spacing.rs  trailing_whitespace.rs
crates/org-tools-core/src/rules/lint/: affiliated_keyword_placement.rs  block_type_validity.rs  clock_entry_validity.rs  deprecated_category_setup.rs  deprecated_export_blocks.rs  drawer_nesting.rs  duplicate_custom_id.rs  duplicate_footnote_definition.rs  duplicate_name.rs  duplicate_target.rs  file_application.rs  heading_level_gap.rs  incomplete_drawer.rs  invalid_babel_call.rs  invalid_edna_syntax.rs  invalid_effort_property.rs  invalid_id_property.rs  invalid_image_alignment.rs  invalid_keyword_syntax.rs  invalid_table_formula.rs  keyword_validity.rs  link_syntax.rs  link_to_local_file.rs  list_consistency.rs  misplaced_heading.rs  misplaced_planning_info.rs  misplaced_property_drawer.rs  missing_export_backend.rs  missing_src_language.rs  mod.rs  non_existent_setupfile.rs  obsolete_affiliated_keywords.rs  obsolete_include_markup.rs  orphaned_affiliated_keywords.rs  orphaned_footnotes.rs  percent_encoding_link.rs  planning_inactive.rs  priority_validity.rs  quote_section.rs  special_property_in_drawer.rs  (+7 more)
crates/org/src/: date.rs  main.rs
crates/org/src/clock/: mod.rs  report.rs  status.rs
crates/org/src/export/: ical.rs  jscal.rs  mod.rs
crates/org/src/query/: agenda.rs  deps.rs  mod.rs  output.rs  parser.rs  predicate.rs
crates/org/tests/: cli_tests.rs
crates/orgfmt-core/: Cargo.toml
crates/orgfmt-core/src/: diagnostic.rs  document.rs  files.rs  lib.rs  locator.rs  runner.rs  source.rs
crates/orgfmt-core/src/rules/: heading.rs
crates/orgfmt-core/src/rules/format/: blank_lines.rs  keyword_spacing.rs  property_drawer_align.rs  regions.rs  table_formatter.rs  tag_alignment.rs
crates/orgfmt-core/src/rules/lint/: affiliated_keyword_placement.rs  block_type_validity.rs  deprecated_category_setup.rs  deprecated_export_blocks.rs  duplicate_footnote_definition.rs  duplicate_name.rs  incomplete_drawer.rs  invalid_id_property.rs  invalid_image_alignment.rs  keyword_validity.rs  (+8 more)
docs/: org-ecosystem.org
docs/operations/: installation.org  release.org
docs/product/: vision.org
docs/technical/: architecture.org
docs/technical/adr/: 0000-template.org  0001-line-based-parsing.org  0002-two-phase-format-then-lint.org  0003-gpl-license.org  0004-cargo-workspace-umbrella-binary.org
docs/user/: usage.org
schemas/: org-blocked-output.schema.json  org-clock-report-output.schema.json  org-clock-status-output.schema.json  org-deps-output.schema.json  org-diagnostic-output.schema.json  org-mutation-output.schema.json  org-query-output.schema.json  org-stuck-output.schema.json
scripts/: compare-lint-with-emacs.sh  compare-with-emacs.sh  release.sh  setup-demo.sh
src/: config.rs  diagnostic.rs  formatter.rs  lib.rs  main.rs  output.rs  runner.rs  source.rs
src/rules/: heading.rs  list.rs  mod.rs  timestamp.rs
src/rules/format/: blank_lines.rs  heading_spacing.rs  keyword_spacing.rs  list_format.rs  mod.rs  property_drawer_align.rs  regions.rs  table_formatter.rs  tag_alignment.rs  timestamp_spacing.rs  trailing_whitespace.rs
src/rules/lint/: affiliated_keyword_placement.rs  block_type_validity.rs  clock_entry_validity.rs  deprecated_category_setup.rs  deprecated_export_blocks.rs  drawer_nesting.rs  duplicate_custom_id.rs  duplicate_footnote_definition.rs  duplicate_name.rs  duplicate_target.rs  file_application.rs  heading_level_gap.rs  incomplete_drawer.rs  invalid_babel_call.rs  invalid_effort_property.rs  invalid_id_property.rs  invalid_image_alignment.rs  invalid_keyword_syntax.rs  keyword_validity.rs  link_syntax.rs  link_to_local_file.rs  list_consistency.rs  misplaced_heading.rs  misplaced_planning_info.rs  misplaced_property_drawer.rs  missing_export_backend.rs  missing_src_language.rs  mod.rs  non_existent_setupfile.rs  obsolete_affiliated_keywords.rs  obsolete_include_markup.rs  orphaned_affiliated_keywords.rs  orphaned_footnotes.rs  percent_encoding_link.rs  planning_inactive.rs  priority_validity.rs  quote_section.rs  special_property_in_drawer.rs  spurious_colons.rs  suspicious_language.rs  (+4 more)
tests/: cli_tests.rs
tests/fixtures/: sample.org
tests/fixtures/edge_cases/: babel.org  blocks.org  comprehensive.org  drawers.org  edna.org  footnotes.org  gtd.org  headings.org  keywords.org  links.org  lists.org  minimal.org  tables.org  tblfm_calc.org  timestamps.org  whitespace.org
