[package]
name = "orgfmt"
version = "0.1.0"
edition = "2021"
description = "Opinionated org-mode linter and formatter"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
