[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
