[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Lino Helms", "org-tools contributors"]
repository = "https://github.com/lino/org-tools"
homepage = "https://github.com/lino/org-tools"
keywords = ["org-mode", "linter", "formatter", "emacs", "productivity"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
