[package]
name = "org-tools-core"
version.workspace = true
edition.workspace = true
description = "Core library for the org CLI suite — org-mode linting, formatting, document model"
license.workspace = true

[dependencies]
clap = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
