[package]
name = "org-tools-core"
version.workspace = true
edition.workspace = true
description = "Core library for the org CLI suite — org-mode linting, formatting, document model"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
unicode-width = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
