[package]
name = "org-tools"
version.workspace = true
edition.workspace = true
description = "Unified CLI for org-mode: lint, format, query, clock, export"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.org"
include = [
    "src/**/*",
    "schemas/**/*",
    "Cargo.toml",
]

[[bin]]
name = "org"
path = "src/main.rs"

[dependencies]
org-tools-core = { path = "../org-tools-core", version = "0.1.3" }
clap = { workspace = true }
clap_complete = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
